--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -18,6 +18,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
+    
+<div id="bg"></div>
 
     <div class="row">
       <div class="fixed center visible-xs">
@@ -60,170 +62,7 @@
         <p class="simple">simple is beautiful</p>
     </div>
 
-    <div class="row" id="main">
-        <div class="row" id="me">
-            <h2>About me</h2>
-              <h1>Miguel Angel Rodriguez Alvarez Icaza</h1>
-                <h3>UX Manager</h3>
-                    <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
-        </div>
-
-        <div class="row" id="skills">
-            <h2>My Skills</h2>
-                <h3>E-commerce expert</h3>
-
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
-
-                <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
-        </div>
-
-        <div class="row">
-            <p class="simplify">simplify</p>
-        </div>
-
-        <div class="row" id="resume">
-            <h2>My Resume</h2>
-
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
-
-                <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
-        </div>
-        <div class="row" id="portfolio">
-            <h2>Portfolio</h2>
-
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
-
-                <div class="row clients">
-                    <div class="row">    
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/brusmall.png" alt="Babies R Us logo" title="Babies R Us logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/cachesmall.png" alt="Cache logo" title="Cache logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/hebsmall.png" alt="H E B logo" title="H E B logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/huaweismall.png" alt="Huawei logo" title="Huawei logo">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">    
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/justicesmall.png" alt="Shop Justice logo" title="Shop Justice logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/navarresmall.png" alt="Navarre Corporation logo" title="Navarre Corporation logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/nexcomsmall.png" alt="Shop Nexcom logo" title="Shop Nexcom logo">
-                            </div>
-                        </div>
-                        <div class="col-s-3 col-xs-3">
-                            <div class="">
-                                <img src="img/trusmall.png" alt="Toys R Us logo" title="Toys R Us logo">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
-        </div>
-
-        <div class="row">
-            <p class="ksimple">keep it simple</p>
-        </div>
-
-        <div class="row" id="ios">
-            <h2>iOS Development</h2>
-
-                <div class="col-s-12 mb32">
-                    <div>
-                        <a href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="30%" alt="Apple App Store badge" title="Apple App Store badge"></a>
-                    </div>
-                </div>
-
-                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
-
-                <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
-        </div>
-        <div class="row" id="contact">
-            <h2>Contact me</h2>
-                <div class="col-xs-12 col-s-6 mb16">
-                    <section>
-                        <form class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
-                          <h3>Please send me a message.</h3>
-                          <fieldset>
-                            <legend>Please provide your name, email address and a message.</legend>
-                            <p>
-                              <label for="cname">Name</label>
-                              <input id="cname" name="name" type="text" required/>
-                            </p>
-                            <p>
-                              <label for="cemail">E-mail</label>
-                              <input id="cemail" type="email" name="email" required/>
-                            </p>
-                            <p>
-                              <label for="ccomment">Your message</label>
-                              <textarea id="ccomment" name="comment" required></textarea>
-                            </p>
-                            <p>
-                              <button class="submit" type="submit" value="Submit">Submit</button>
-                            </p>
-                          </fieldset>
-                        </form>
-                    </section>
-                </div>
-                <div class="col-xs-12 col-s-6 center">
-                    <button class="tweets mb16">My Tweets</button>
-                        <div id="tweets">
-                            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
-                                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                        </div>
-                </div>
-        </div>
-    </div>
-
-    <footer class="row">
-            <div class="col-s-3">
-                <p class="center"><a href="#">&copy; Mikerai 2014</a></p>
-            </div>
-            <div class="col-s-9">
-                <div class="col-s-12 center">
-                    <div class="col-s-2">
-                        <a href="#me">Me</a>
-                    </div>
-                    <div class="col-s-2">
-                        <a href="#skills">Skills</a>
-                    </div>
-                    <div class="col-s-2">
-                        <a href="#resume">Resume</a>
-                    </div>
-                    <div class="col-s-2">
-                        <a href="#portfolio">Portfolio</a>
-                    </div>
-                    <div class="col-s-2">
-                        <a href="#ios">iOS</a>
-                    </div>
-                    <div class="col-s-2">
-                        <a href="#contact">Contact</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+</div>
 
     <!--[if IE 8]>     
     <script src="vendor/jquery-1.11.1.min.js"></script>
@@ -232,6 +71,7 @@
     <script type='text/javascript' src="vendor/jquery-2.1.1.min.js"></script>
     <!--<![endif]-->
     <script type='text/javascript' src="responsive.min.js"></script>
+    <script type='text/javascript' src="blur.js"></script>
     <script type='text/javascript' src="scripts.js"></script>
     <script type='text/javascript' src="validate.js"></script>
 </body>
