--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -62,6 +62,8 @@
         <p class="simple">simple is beautiful</p>
     </div>
 
+        <div id="main">
+
         <div class="row" id="me">
             <h2>About me</h2>
               <h1>Miguel Angel Rodriguez Alvarez Icaza</h1>
@@ -195,6 +197,8 @@
                                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                         </div>
                 </div>
+        </div>
+
         </div>
 
         <footer class="row">
