--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     
-<div id="bg">
+<div id="bg"></div>
 
     <div class="row">
       <div class="fixed center visible-xs">
@@ -228,8 +228,6 @@
                 </div>
             </div>
         </footer>
-
-</div>
 
     <!--[if IE 8]>     
     <script src="vendor/jquery-1.11.1.min.js"></script>
