--- a/bp/index.html
+++ b/bp/index.html
@@ -21,7 +21,7 @@
 
     <div class="row">
       <div class="fixed center visible-xs">
-        <button class="menuB">Menu</button>
+        <input class="menuB" type="image" src="img/menuB.png"></input>
           <nav>
             <ul>
               <li><a href="#me">Me</a></li>
