--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -15,8 +15,9 @@
         <script src="vendor/html5shiv.min.js"></script>
         <script src="vendor/respond.min.js"></script>
     <![endif]-->
+    
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     
@@ -244,5 +245,12 @@
     <script type='text/javascript' src="blur.js"></script>
     <script type='text/javascript' src="scripts.js"></script>
     <script type='text/javascript' src="validate.js"></script>
+    <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render({
+          'theme' : 'dark'
+        });
+      };
+    </script>
 </body>
 </html>
