Google no captcha recaptcha implementation

--- a/bp/index.html
+++ b/bp/index.html
@@ -16,6 +16,7 @@
         <script src="vendor/respond.min.js"></script>
     <![endif]-->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 
@@ -182,6 +183,10 @@
                             </p>
                             <p>
                               <button class="submit" type="submit" value="Submit">Submit</button>
+                            </p>
+                            <p>
+                                <label for="captcha">Human?</label>
+                                <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT"></div>
                             </p>
                           </fieldset>
                         </form>
