--- a/bp/index.html
+++ b/bp/index.html
@@ -181,13 +181,21 @@
                               <label for="ccomment">Your message</label>
                               <textarea id="ccomment" name="comment" required></textarea>
                             </p>
+                            <p class="noCaptcha">
+                                <label for="captcha">Are you human?</label>
+                                <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate"></div>
+                            </p>
                             <p>
                               <button class="submit" type="submit" value="Submit">Submit</button>
                             </p>
-                            <p>
-                                <label for="captcha">Human?</label>
-                                <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT"></div>
-                            </p>
+                            <script>
+                                onValidate = function ()
+                                {
+                                    $("button.submit").slideToggle();
+                                    $("p.noCaptcha").fadeOut();
+                                    $("div.g-recaptcha").fadeOut();
+                                };
+                            </script>
                           </fieldset>
                         </form>
                     </section>
