Minor changes to animation

--- a/bp/index.html
+++ b/bp/index.html
@@ -191,7 +191,7 @@
                             <script>
                                 onValidate = function ()
                                 {
-                                    $("button.submit").slideToggle();
+                                    $("button.submit").slideToggle(987);
                                     $("p.noCaptcha").fadeOut();
                                     $("div.g-recaptcha").fadeOut();
                                 };
