--- a/bp/index.html
+++ b/bp/index.html
@@ -191,9 +191,9 @@
                             <script>
                                 onValidate = function ()
                                 {
-                                    $("button.submit").slideToggle(987);
-                                    $("p.noCaptcha").fadeOut();
-                                    $("div.g-recaptcha").fadeOut();
+                                    $("button.submit").slideToggle(1500);
+                                    $("p.noCaptcha").fadeOut(1500);
+                                    $("div.g-recaptcha").fadeOut(1500);
                                 };
                             </script>
                           </fieldset>
