--- a/bp/index.html
+++ b/bp/index.html
@@ -56,19 +56,19 @@
         </div>
     </div>
 
-    <div class="row" tabindex="7">
+    <div class="row" tabindex="0">
         <p class="simple">simple is beautiful</p>
     </div>
 
     <div class="row" id="main">
-        <div class="row" id="me" tabindex="8">
+        <div class="row" id="me" tabindex="0">
             <h2>About me</h2>
               <h1>Miguel Angel Rodriguez Alvarez Icaza</h1>
                 <h3>UX Manager</h3>
                     <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
         </div>
 
-        <div class="row" id="skills" tabindex="9">
+        <div class="row" id="skills" tabindex="0">
             <h2>My Skills</h2>
                 <h3>E-commerce expert</h3>
 
@@ -77,23 +77,23 @@
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
 
-        <div class="row" tabindex="10">
+        <div class="row" tabindex="0">
             <p class="simplify">simplify</p>
         </div>
 
-        <div class="row" id="resume" tabindex="11">
+        <div class="row" id="resume" tabindex="0">
             <h2>My Resume</h2>
 
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
-        <div class="row" id="portfolio" tabindex="12">
+        <div class="row" id="portfolio" tabindex="0">
             <h2>Portfolio</h2>
 
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
-                <div class="row clients" tabindex="13">
+                <div class="row clients" tabindex="0">
                     <div class="row">    
                         <div class="col-s-3 col-xs-3">
                             <div class="">
@@ -143,16 +143,16 @@
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
 
-        <div class="row" tabindex="14">
+        <div class="row" tabindex="0">
             <p class="ksimple">keep it simple</p>
         </div>
 
-        <div class="row" id="ios" tabindex="15">
+        <div class="row" id="ios" tabindex="0">
             <h2>iOS Development</h2>
 
                 <div class="col-s-12 mb32">
                     <div>
-                        <a tabindex="16" href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="30%" alt="Apple App Store badge" title="Apple App Store badge"></a>
+                        <a tabindex="0" href="img/App_Store_Badge_US-UK_1000x296.svg" data-modal-title="Available in the Apple App Store"><img src="img/App_Store_Badge_US-UK_135x40.svg" width="30%" alt="Apple App Store badge" title="Apple App Store badge"></a>
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
 
                 <p>Nam gravida ornare orci, et tristique elit rutrum sed. Etiam nec nibh turpis. Sed pharetra pretium metus. Curabitur pellentesque erat leo, in facilisis mi pharetra id. Aenean ultricies nulla vitae orci venenatis, ut fringilla odio laoreet. Aliquam dictum tellus dui, sagittis tempus massa mollis vel. Sed rhoncus lacus ac dolor sodales consequat. Integer purus tellus, efficitur ut tortor eu, varius semper libero. Nullam justo leo, varius sit amet aliquam sit amet, lobortis id enim. Proin hendrerit tincidunt dignissim.</p>
         </div>
-        <div class="row" id="contact" tabindex="17">
+        <div class="row" id="contact" tabindex="0">
             <h2>Contact me</h2>
                 <div class="col-xs-12 col-s-6 mb16">
                     <section>
@@ -178,26 +178,26 @@
                                     $("div.g-recaptcha").fadeOut(1500);
                                 };
                             </script>
-                          <fieldset class="contactForm" tabindex="18">
+                          <fieldset class="contactForm" tabindex="0">
                             <legend>Please provide your name, email address and a message.</legend>
                             <p>
                               <label for="cname">Name</label>
-                              <input id="cname" name="name" type="text" required tabindex="19" />
+                              <input id="cname" name="name" type="text" required tabindex="0" />
                             </p>
                             <p>
                               <label for="cemail">E-mail</label>
-                              <input id="cemail" type="email" name="email" required tabindex="20" />
+                              <input id="cemail" type="email" name="email" required tabindex="0" />
                             </p>
                             <p>
                               <label for="ccomment">Your message</label>
-                              <textarea id="ccomment" name="comment" required tabindex="21"></textarea>
+                              <textarea id="ccomment" name="comment" required tabindex="0"></textarea>
                             </p>
                             <p>
                               <button class="submit" type="submit" value="Submit">Submit</button>
                             </p>
                           </fieldset>
                         </form>
-                    </section>
+                    </section>ƒ
                 </div>
                 <div class="col-xs-12 col-s-6 center">
                     <button class="tweets mb16" tabindex="0">Hide my tweets</button>
