--- a/bp/index.html
+++ b/bp/index.html
@@ -197,7 +197,7 @@
                             </p>
                           </fieldset>
                         </form>
-                    </section>ƒ
+                    </section>
                 </div>
                 <div class="col-xs-12 col-s-6 center">
                     <button class="tweets mb16" tabindex="0">Hide my tweets</button>
