--- a/new_look/Video Background Version/HTML Files/index-es.html
+++ b/new_look/Video Background Version/HTML Files/index-es.html
@@ -306,7 +306,7 @@
                     <h5>Speedcommerce</h5>
                     <p class="small">1 A&ntilde;o</p>
                     <div class="date">Septiembre 2013 - Presente</div>
-                    <p>Experto en comercio electr&oacute;nico. A cargo de un equipo de 4 Dise&ntilde;adores Gr&aacute;ficos y 12 Desarrolladores Web. L&iacute;der enfocado en Desarrollo de Interfaz de Usuario y Experiencia de Usuario. Experto en desarrollar proyctos pensando en la compatibilidad de los Navegadores. Soluciones orientas a sitios completamente responsivos.</p>
+                    <p>Experto en comercio electr&oacute;nico. A cargo de un equipo de 4 Dise&ntilde;adores Gr&aacute;ficos y 12 Desarrolladores Web. L&iacute;der enfocado en Desarrollo de Interfaz de Usuario y Experiencia de Usuario. Experto en desarrollar proyectos pensando en la compatibilidad de los Navegadores. Soluciones orientadas a sitios completamente responsivos.</p>
                 </div><!-- End of 2/3 Column Last -->
 
                 <!-- Start of 2/3 Column Last -->
@@ -334,7 +334,7 @@
                 <!-- Start of Content -->
                 <div class="content shadow" id="Testimonials">
                     
-                	<h2 class="border wow fadeInRightBig" data-wow-offset="80" data-wow-duration="2s">My Metas y Objetivos</h2>
+                	<h2 class="border wow fadeInRightBig" data-wow-offset="80" data-wow-duration="2s">Mis Metas y Objetivos</h2>
                                 
                     <!-- Start of Owl Carousel -->
                     <div class="testimonials owl-carousel">
