--- a/new_look/Video Background Version/HTML Files/index-es.html
+++ b/new_look/Video Background Version/HTML Files/index-es.html
@@ -481,6 +481,18 @@
                     <textarea name="message" id="message" rows="8" cols="30" class="requiredField message"></textarea>
                     </p>
 
+                    <p class="noCaptcha">
+                        <label for="captcha">Are you human?</label>
+                        <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate"></div>
+                    </p>
+                    <script>
+                        onValidate = function (){
+                            $("input#submitted").slideToggle(150);
+                            $("p.noCaptcha").fadeOut(1500);
+                            $("div.g-recaptcha").fadeOut(1500);
+                        };
+                    </script>
+
                     <p><input name="submitted" id="submitted" value="Enviar" class="submit" type="submit" /></p>
 
                 </form>  <!--End Contact Form -->
@@ -523,6 +535,7 @@ if (!window.jQuery) {
 </script>    
 <!-- Now we load the JS file for the fancy things on the page -->
 <script type="text/javascript" src="js/scripts.min.js"></script>
+<script type='text/javascript' src="https://www.google.com/recaptcha/api.js"></script>
 <!--<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
