--- a/new_look/Video Background Version/HTML Files/index.html
+++ b/new_look/Video Background Version/HTML Files/index.html
@@ -522,6 +522,7 @@ if (!window.jQuery) {
 </script>    
 <!-- Now we load the JS file for the fancy things on the page -->
 <script type="text/javascript" src="js/scripts.min.js"></script>
+<script type='text/javascript' src="https://www.google.com/recaptcha/api.js"></script>
 <!--<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
